[build-system]
requires = [
	 "cython",
	 "oldest-supported-numpy; python_version<'3.9'",
	 "numpy>=2; python_version>='3.9'",
	 "setuptools",
	 "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = "pp* *-manylinux_i686 *_ppc64le *_s390x *-musllinux*"

[tool.cibuildwheel.macos]
archs = "x86_64 universal2"

[tool.cibuildwheel.linux]
archs = 'x86_64 aarch64'
